# thumbnail-analyzer

./: .env.example  LICENSE  PROJECT_IMPLEMENTATION.md  README.md  project_config.json  pyproject.toml  requirements.txt  run_gui.sh  run_gui_windows.ps1
app/: db.py  domain_engine.py  exporters.py  file_utils.py  llm_gateway.py  main.py  plugin_loader.py  prompt_builder.py  schemas.py  security.py
src/: index.py
static/: app.js  index.html  styles.css
tests/: test_single_project.py
